TASK-05: add swagger with form to fill
